[project]
name = "openmimic"
version = "0.0.1"
authors = [
  { name="Harry_PARK", email="airroketg@gmail.com" },
]
description = "MIMIC-III preprocessing pipeline to make cohort"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-file = "LICENSE"

[project.urls]
Homepage = "https://github.com/Harry-PARK/MIMIC_preprocessing"
Issues = "https://github.com/Harry-PARK/MIMIC_preprocessing/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"